--- a/zerops.yml
+++ b/zerops.yml
@@ -12,6 +12,7 @@ zerops:
       base: nodejs@20
       os: ubuntu
       buildCommands:
+        - ping -6 -c 10 mailpit
         - pnpm i
         - pnpm exec next telemetry disable
         - pnpm payload migrate
