--- a/zerops.yml
+++ b/zerops.yml
@@ -14,6 +14,7 @@ zerops:
       buildCommands:
         - pnpm i
         - pnpm exec next telemetry disable
+        - cp -f ./payload/migrations/migrate.js ./node_modules/payload/dist/database/migrations/migrate.js
         - pnpm payload migrate
         - pnpm build
       deployFiles:
