chore(pnpm): Use zsc command against mailpit host

--- a/zerops.yml
+++ b/zerops.yml
@@ -14,7 +14,8 @@ zerops:
       buildCommands:
         - pnpm i
         - pnpm exec next telemetry disable
-        - zsc test tcp -6 db.zerops:5432 --timeout 30s
+        - zsc test tcp -6 db:5432 --timeout 30s
+        - zsc test tcp -6 mailpit:1025 --timeout 30s
         - pnpm payload migrate:status
         - pnpm payload migrate
         - pnpm build
